[gd_scene load_steps=8 format=2]

[ext_resource path="res://items/magnet.png" type="Texture" id=1]
[ext_resource path="res://items/bag.png" type="Texture" id=2]
[ext_resource path="res://back/Locker.gd" type="Script" id=3]
[ext_resource path="res://back/open_locker.jpg" type="Texture" id=4]
[ext_resource path="res://items/wheel.png" type="Texture" id=5]
[ext_resource path="res://items/key.png" type="Texture" id=6]
[ext_resource path="res://items/backpack.png" type="Texture" id=7]

[node name="locker" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="open_locker" type="Sprite" parent="."]
position = Vector2( 514.487, 298.036 )
rotation = -1.5708
scale = Vector2( 0.374415, 0.501018 )
texture = ExtResource( 4 )

[node name="bag" type="Sprite" parent="open_locker"]
position = Vector2( -61.7256, 10.5482 )
rotation = 1.5708
scale = Vector2( 0.265517, 0.260204 )
texture = ExtResource( 2 )

[node name="bag" type="Button" parent="open_locker/bag"]
margin_left = -720.0
margin_top = -936.0
margin_right = 633.0
margin_bottom = 1407.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="magnet" type="Sprite" parent="open_locker"]
position = Vector2( 394.897, 6.74451 )
scale = Vector2( 0.12432, 0.148056 )
texture = ExtResource( 1 )

[node name="magnet" type="Button" parent="open_locker/magnet"]
margin_left = -802.0
margin_top = -821.0
margin_right = 966.0
margin_bottom = 974.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="."]
margin_left = 1.0
margin_top = 520.0
margin_right = 1029.0
margin_bottom = 598.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Control" parent="."]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryBG" type="ColorRect" parent="Inventory"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 225.0
margin_top = 10.0
margin_right = 815.0
margin_bottom = 100.0
color = Color( 0.552941, 0.552941, 0.552941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bag" type="Sprite" parent="Inventory"]
visible = false
position = Vector2( 755.456, 45.5813 )
scale = Vector2( 0.05, 0.04 )
texture = ExtResource( 2 )

[node name="Wheel" type="Sprite" parent="Inventory"]
visible = false
position = Vector2( 599.716, 57.2354 )
scale = Vector2( 0.0472156, 0.0400875 )
texture = ExtResource( 5 )

[node name="Magnet" type="Sprite" parent="Inventory"]
visible = false
position = Vector2( 422.785, 49.8192 )
scale = Vector2( 0.05, 0.0422667 )
texture = ExtResource( 1 )

[node name="Key" type="Sprite" parent="Inventory"]
visible = false
position = Vector2( 271.282, 55.1165 )
scale = Vector2( 0.05, 0.0422667 )
texture = ExtResource( 6 )

[node name="ToggleInventory" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -94.9999
margin_top = 86.0
margin_right = 941.0
margin_bottom = 999.0
rect_rotation = -90.0
rect_scale = Vector2( 0.07, 0.082 )
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="open_locker/bag/bag" to="." method="_on_bag_pressed"]
[connection signal="pressed" from="open_locker/magnet/magnet" to="." method="_on_magnet_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="ToggleInventory" to="." method="_on_ToggleInventory_pressed"]
